# local-subtitle-exe

./: .gitignore  BUILD_STATUS.md  BUILD_TROUBLESHOOTING.md  index.html  package.json  skills-lock.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.trae/specs/lemon-subtitle-studio/: checklist.md  spec.md  tasks.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  ffmpeg.rs  gpu_detect.rs  main.rs  model_downloader.rs  onnx_translate.rs  translate.rs  whisper.rs
src-tauri/whisper-rs-sys/: Cargo.toml  build.rs
src-tauri/whisper-rs-sys/src/: bindings.rs
src/components/: ASRStudio.tsx  AudioExtractor.tsx  BatchWorkspace.tsx  Navigation.tsx  Settings.tsx  TranslationDesk.tsx
src/hooks/: useGlobalSettings.ts  useTauri.ts
src/types/: index.ts
