[package]
name = "lemon-subtitle-studio"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2.11.0", features = [] }
tokio = { version = "1.0", features = ["full"] }
sysinfo = "0.30.0"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
