[package]
name = "lemon-subtitle-studio"
version = "1.0.0"
edition = "2021"

[features]
default = []
cuda = ["whisper-rs/cuda", "ort/cuda"]

[dependencies]
tauri = { version = "2.11", features = [] }
tokio = { version = "1.0", features = ["full"] }
sysinfo = "0.30.0"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled", "serde_json"] }
dirs = "5.0"
rand = "0.8"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "fetch-models"] }
once_cell = "1.19"
whisper-rs = "0.14"
ffmpeg-sidecar = "2.5"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[package.metadata.tauri]
windows-target = "x86_64-pc-windows-msvc"

[patch.crates-io]
whisper-rs-sys = { path = "./whisper-rs-sys" }
